<resources>
    <string name="app_name">Forecast</string>
    <string name="main_activity_label_name">Country</string>
    <string name="city_fragment_activity_label_name">City</string>
    <string name="country_menu_settings">Settings</string>
    <string name="country_sort_menu_title">Sort countries</string>
    <string name="country_menu_sort_by_country_name">Sort by country name</string>
    <string name="country_menu_sort_by_continent">Sort by continent</string>
    <string name="country_menu_sort_by_population">Sort by population</string>
    <string name="country_listview_row_textView_country_name">Country</string>
    <string name="country_listview_row_textView_continent_name">Continent</string>
    <string name="country_listview_row_textView_population">Population</string>
    <string name="city_listview_row_textview_city_name">City</string>
    <string name="activity_city_fragment_city_research">Search a city</string>
    <string name="custom_action_bar_country_title">World countries</string>
    <string name="custom_action_bar_country_textview_title">Title</string>
    <string name="custom_action_bar_city_title">Cities</string>
    <string name="sort_order_ASC">ASC</string>
    <string name="sort_order_DES">DES</string>
    <string name="arrays_sort_ascending">Ascending sort</string>
    <string name="arrays_sort_descending">Descending sort</string>
    <string name="fragment_weather_forecast_textview_temperature">Temp</string>
    <string name="fragment_weather_forecast_textview_description">Description</string>
    <string name="fragment_weather_forecast_textview_pressure">Pressure</string>
    <string name="fragment_weather_forecast_textview_pressure_unity">kPa</string>
    <string name="fragment_weather_forecast_textview_humidity">Humidity</string>
    <string name="fragment_weather_forecast_textview_humidity_unity">%</string>
    <string name="fragment_weather_forecast_textview_sunrise">Sunrise:</string>
    <string name="fragment_weather_forecast_textview_sunset">Sunset:</string>
    <string name="preferences_action_bar_title">APPLICATION SETTINGS</string>
    <string name="preferences_category_country_settings">COUNTRY SETTINGS</string>
    <string name="preferences_category_application_settings">APPLICATION SETTINGS</string>
    <string name="preferences_show_flags">show_flags</string>
    <string name="preferences_show_flags_summary_off">Click to show the countries flags</string>
    <string name="preferences_show_flags_summary_on">Click to remove the countries flags</string>
    <string name="preferences_show_flags_title">Show countries flags</string>
    <string name="preferences_show_country_name_language">show_country_names_language</string>
    <string name="preferences_show_country_name_language_summary_off">Click to show country names in english</string>
    <string name="preferences_show_country_name_language_summary_on">Click to show country names in local language</string>
    <string name="preferences_show_country_name_language_title">Country names language</string>
    <string name="preferences_app_language">app_language</string>
    <string name="preferences_app_language_summary_off">Click to put application in french</string>
    <string name="preferences_app_language_summary_on">Click to put application in english</string>
    <string name="preferences_app_language_title">Application language</string>
    <string name="preferences_exit_settings">exit_settings</string>
    <string name="preferences_exit_settings_summary">Click to exit the preferences menu</string>
    <string name="preferences_exit_settings_title">Exit preferences</string>
    <string name="shared_preferences_city_id">City id</string>
    <string name="warning_network_connection_flags_toast">The Wi-Fi network is not available,
        you can\'t download the country flags !</string>
    <string name="warning_network_connection_google_map_toast">The Wi-Fi network is not available,
        you can\'t use google map and you can\'t see the city forecasts !</string>
    <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">
        AIzaSyBzYaLeIXOm15A8lZ4izXxxwV4pL2pQGWU
    </string>
</resources>
